set submit button text as black to fix bug on ios

--- a/app/ContactForm.module.css
+++ b/app/ContactForm.module.css
@@ -51,4 +51,5 @@
   font-family: var(--dm-sans);
   background-color: white;
   cursor: pointer;
+  color: black;
 }
